[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-benchmarking"
version = "0.1.0"
description = "Extension of Fluid Benchmarking with ordinal (GRM, GPCM) and continuous IRT for adaptive LLM evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Valentin Hofmann", email = "valentinh@allenai.org" }]

dependencies = [
  "huggingface_hub",
  "ipykernel",
  "numpy",
  "pandas",
  "scipy",
  "tabulate",
  "tqdm",
]

[project.optional-dependencies]
irt = [
  "py-irt",
]
ordinal = [
  "pyro-ppl>=1.8.0",
  "torch>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]